# Engram

./: .gitignore  README.md  README_ko.md  engram_design_v2.1.md  engram_design_v2.3.md  meaning_aware_search_design.md  pyproject.toml
scripts/: benchmark_common.py  benchmark_meaning_search.py  benchmark_recovery.py  benchmark_search_latency.py  benchmark_write_pipeline.py  eval_meaning_search.py  meaning_benchmark_helpers.py
src/engram/: __init__.py  background.py  canonical.py  cli.py  config.py  context_builder.py  data_quality.py  engram.py  errors.py  event_ops.py  mcp_server.py  meaning_index.py  openai_extractor.py  openai_meaning_analyzer.py  projector.py  recovery.py  retrieval.py  retry.py  schema_registry.py  search_terms.py  semantic.py  semantic_index.py  snapshot_serde.py  time_utils.py  types.py
tests/: conftest.py
tests/integration/: test_append_known_time_api.py  test_background_stress.py  test_background_worker.py  test_canonical_flush_api.py  test_causal_api.py  test_data_quality_api.py  test_failed_run_retry.py  test_flush_projection_api.py  test_mcp_remote.py  test_mcp_scenario.py  test_openai_extractor_api.py  test_rebuild_projection_api.py  test_relation_api.py  test_reprocess_api.py  test_retrieval_context_api.py  test_semantic_index_api.py  test_server.py  test_startup_recovery.py  test_turn_api.py  test_valid_time_api.py  test_writer_lock.py
tests/property/: test_store_invariants.py
tests/unit/: test_event_store.py  test_known_replay.py  test_openai_embedder.py  test_openai_extractor.py  test_openai_meaning_analyzer.py  test_raw_log.py  (+3 more)
(+12 files in other folders)
