[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Embedded event-sourced memory engine for LLM applications"
readme = "engram_design_v2.1.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

