[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Embedded event-sourced memory engine for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.0",
  "httpx>=0.27.0",
]
openai = [
  "openai>=1.0",
]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0",
]
mcp = [
  "mcp[cli]>=1.0.0",
]

[project.scripts]
engram = "engram.cli:main"
engram-server = "engram.server.__main__:main"
engram-mcp = "engram.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
